final commit -SB

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
         <title>Terrible-websites</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
+    <body class="index">
         <div id="container">
             <h1>WELCOME TO TERRIBLE WEBSITES</h1>
             <p>This webpage was intentionally designed to be an eyesore. We apologize for any discomfort caused.</p>
-            <p>If you'd like to experience more terrible design, <a onclick="alert('error')">click</a> the button below:</p>
+            <p>If you want to go to the sign up page, <a href="index.html" onclick="alert('error')">click</a> <a href="pages/step1.html">here</a></p>
             <a href="index.html" class="button" onclick="alert('error')">Click Me!</a>
         </div>
     </body>
