--- a/pages/signup.html
+++ b/pages/signup.html
@@ -4,14 +4,15 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Terrible-websites</title>
-        <link rel="stylesheet" href="style.css">
+        <title>Signup</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
-    <body>
-        <div id="container">
-            <h1>WELCOME TO TERRIBLE WEBSITES</h1>
+    <body class="signup">
+        <div id="container3">
+            <h1>Sorry I didn't make signup yet.</h1>
+            <h1>COMING SOON!!!!</h1>
             <script>
-                var container = document.getElementById("container");
+                var container = document.getElementById("container3");
                 function createSnow(){
                     const el = document.createElement("div");
                     el.classList.add('snow');
@@ -38,7 +39,6 @@
                     createSnow();
                 };
             </script>
-            <div class="snow next">hi</div>
         </div>
     </body>
 </html>
